Donate Stats on the Admin Homepage

--- a/resources/view/admin/base.html.twig
+++ b/resources/view/admin/base.html.twig
@@ -28,6 +28,9 @@
 
 		<link rel="stylesheet" type="text/css" href="{{ URL }}/resources/canary/style.css">
 
+		<link rel="stylesheet" type="text/css" href="{{ URL }}/resources/canary/css/plugins/charts/chart-apex.css">
+		<script src="{{ URL }}/resources/canary/vendors/js/charts/apexcharts.min.js"></script>
+
 		<script src="{{ URL }}/resources/canary/vendors/js/ckeditor/ckeditor.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/extensions/sweetalert2.all.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/extensions/polyfill.min.js"></script>
@@ -206,12 +209,10 @@
 		<script src="{{ URL }}/resources/canary/vendors/js/tables/datatable/buttons.print.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/tables/datatable/dataTables.rowGroup.min.js"></script>
 		
-		<!-- Forms-->
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/validation/jquery.validate.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/cleave/cleave.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/cleave/addons/cleave-phone.us.js"></script>
 
-		<script src="{{ URL }}/resources/canary/vendors/js/charts/chart.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/pickers/flatpickr/flatpickr.min.js"></script>
 
 		<script src="{{ URL }}/resources/canary/js/core/app-menu.js"></script>
@@ -219,10 +220,6 @@
 
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/spinner/jquery.bootstrap-touchspin.js"></script>
 		<script src="{{ URL }}/resources/canary/custom/form-number-input.js"></script>
-		
-		<!-- Custom -->
-		<script src="{{ URL }}/resources/canary/custom/charts.js"></script>
-		<script src="{{ URL }}/resources/canary/custom/players-list.js"></script>
 
 		<script>
 			$(window).on('load', function () {
