Update animated outfits 12.9+

--- a/resources/view/admin/modules/samples/edit.html.twig
+++ b/resources/view/admin/modules/samples/edit.html.twig
@@ -82,7 +82,7 @@
                                     <label class="form-label">Outfit Image</label>
                                     <div class="input-group">
                                         <div name="updateoutfit" id="updateoutfit">
-                                            <img src="https://outfit-images-oracle.ots.me/1285_walk_animation/animoutfit.php?id={{ sample.looktype }}&addons={{ sample.lookaddons }}&head={{ sample.lookhead }}&body={{ sample.lookbody }}&legs={{ sample.looklegs }}&feet={{ sample.lookfeet }}">
+                                            <img src="{{ sample.outfit }}">
                                         </div>
                                     </div>
                                 </div>
