--- a/resources/view/admin/modules/samples/index.html.twig
+++ b/resources/view/admin/modules/samples/index.html.twig
@@ -79,7 +79,7 @@
                                     <label class="form-label">Outfit Image</label>
                                     <div class="input-group">
                                         <div name="updateoutfit" id="updateoutfit">
-                                            <img src="https://outfit-images-oracle.ots.me/1285_walk_animation/animoutfit.php?id=128&addons=0&head=0&body=0&legs=0&feet=0">
+                                            <img src="">
                                         </div>
                                     </div>
                                 </div>
