--- a/resources/view/admin/base.html.twig
+++ b/resources/view/admin/base.html.twig
@@ -210,6 +210,7 @@
 		<script src="{{ URL }}/resources/canary/vendors/js/tables/datatable/dataTables.rowGroup.min.js"></script>
 		
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/validation/jquery.validate.min.js"></script>
+		<script src="{{ URL }}/resources/canary/vendors/js/forms/repeater/jquery.repeater.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/cleave/cleave.min.js"></script>
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/cleave/addons/cleave-phone.us.js"></script>
 
