--- a/resources/view/pages/account/characteredit.html.twig
+++ b/resources/view/pages/account/characteredit.html.twig
@@ -406,7 +406,7 @@
 																	<td>
 																		<a href="{{URL}}/account" style="padding:0px;margin:0px;">
 																		<div class="BigButton" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue.gif)">
-																				<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue_over.gif);"></div><input class="BigButtonText" type="submit" value="Back"></div>
+																				<div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image:url({{ IMAGE_PATH }}/global/buttons/button_blue_over.gif);"></div><input class="BigButtonText" type="button" value="Back"></div>
 																			</div>
 																		</a>
 																	</td>
