Fix create account

--- a/resources/view/pages/account/createaccount_confirm.html.twig
+++ b/resources/view/pages/account/createaccount_confirm.html.twig
@@ -96,7 +96,7 @@
 																	</tr>
 																	<tr style="background-color:#D4C0A1;">
 																		<td class="LabelV">World:</td>
-																		<td>{{ character.world }}</td>
+																		<td>{{ character.world.name }}</td>
 																	</tr>
 																</tbody>
 															</table>
